tests/snapshots/shell__accurate_errors_with_bloated_floats.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected rparen to close grouped expression
   ╭─[accurate_errors_with_bloated_floats:2:9]
   │
 2 │ echo .(1
   │       ─┬  
   │        ╰── this grouped expression
───╯

